k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:

  name: nginx-deploy

spec:

  selector:
    matchLabels:
      site: nginx

  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate

  template:
    metadata:
      labels:
        site: nginx

    spec:
      containers:
        - name: web-container
          image: terop1989/my_docker_pipe_image:latest
          ports:
            - containerPort: 80

      volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/

    volumes:
      - name: config
        configMap:
          name: nginx-configmap
