k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: www-test
  labels:
    owner: yk

spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    site: nginx
