k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: test01.terop-kuber.com
    http:
      paths:
      - backend:
          serviceName: nginx-service
          servicePort: 80
        path: /
